@@ -63,6 +63,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Require "protochain" value to be within range.
       Always enable the "gateway" primitive.
       Properly reject "link proto" for DLT_BACNET_MS_TP.
+      Extend "link (host|broadcast)" support onto DLT_BACNET_MS_TP.
     rpcap:
       Support user names and passwords in rpcap:// and rpcaps:// URLs.
       Add a -t flag to rpcapd to specify the data channel port; from
